--- a/index.htm
+++ b/index.htm
@@ -4,30 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy</title>
-
+    <!--icone da guia-->
     <link rel="icon" href="./images/logo-icon.png" />
-    <link rel="stylesheet" href="./css/style.css">
+    <!--import css-->
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/animation.css" />
+    <link rel="stylesheet" href="./css/page-landing.css" />
+    <!--fonte google-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <header>
-      <img src="./images/logo.svg" alt="Logomarca de Happy" />
+    <div id="page-landing">
+      <div id="container">
+        <header>
+          <img class="animate-up" id="logo" src="./images/logo.svg" alt="Logomarca de Happy" />
 
-      <div>
-        <strong>Rio do Sul</strong>
-        <p>Santa Catarina</p>
+          <div class="location animate-up">
+            <strong>Rio do Sul</strong>
+            <p>Santa Catarina</p>
+          </div>
+        </header>
+        <main>
+          <h1 class="animate-up">Leve felicidade para o mundo</h1>
+
+          <section class="visit">
+            <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
+
+            <a class="animate-up" href="#" title="Visite orfanatos">
+              <img src="./images/arrow.svg" alt="Ir para o mapa" />
+            </a>
+          </section>
+        </main>
       </div>
-    </header>
-    <main>
-      <h1>Leve felicidade para o mundo</h1>
-
-      <section>
-        <p>Visite orfanatos e mude o dia de muitas crianças</p>
-
-        <a href="#" title="Visite orfanatos">
-          <img src="./images/arrow.svg" alt="Ir para o mapa" />
-        </a>
-      </section>
-    </main>
+    </div>
   </body>
 </html>
