--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/animation.css" />
     <link rel="stylesheet" href="./css/page-landing.css" />
     <!--fonte google-->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -21,8 +21,8 @@
           <img class="animate-up" id="logo" src="./images/logo.svg" alt="Logomarca de Happy" />
 
           <div class="location animate-up">
-            <strong>Rio do Sul</strong>
-            <p>Santa Catarina</p>
+            <strong>Perdizes</strong>
+            <p>Minas Gerais</p>
           </div>
         </header>
         <main>
